# anamnesis

./: .env.example  .gitattributes  .gitignore  AUDIT_2026-06-18.md  AUDIT_Anamnesis_2026-06-16.md  CITATION.cff  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  WEAKNESSES.md  install.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
anamnesis/: __init__.py  _test_api.py  _test_audit_fixes.py  _test_brain.py  _test_brain_invariants.py  _test_brain_sqlite.py  _test_capture.py  _test_dashboard.py  _test_entities.py  _test_guards.py  _test_integrations.py  _test_memory_hook.py  _test_memory_v3.py  _test_merge.py  _test_quant.py  _test_watch.py  anticipate.py  api.py  bootstrap_contexts.py  capture.py  config.py  consolidate_memory.py  dashboard.py  digest.py  docparse.py  embed_index.py  graph.py  graphify.py  guards.py  index_sqlite.py  ingest.py  interop.py  manage_tasks.py  mcp_server.py  memory_hook.py  memory_search.py  merge.py  rankers.py  remember.py  reranker_ce.py  (+2 more)
anamnesis/integrations/: __init__.py  langchain_memory.py  llamaindex_retriever.py
anamnesis/research/: ABLATION_RESULTS.md  BANDIT.md  CONSOLIDATION_EVAL.md  DIVERGENT.md  FORGETTING.md  POISONING.md  POSTERIOR_MODEL.md  QA_ACCURACY.md  QUANTIZATION.md  README.md  REAL_TRACE.md  RETRIEVAL_FUSION.md  W2_PRECISION.md  _test_consolidation_eval.py  _test_precision_bench.py  _test_xreranker.py  _xreranker.py  abstractive.py  bandit.py  bitemporal_ablation.py  consolidation_eval.py  divergent.py  embedder_ab.py  head_to_head.json  head_to_head.py  longmem_eval.py  posterior_model.py  (+7 more)
docs/: ARCHITECTURE.md  BENCHMARKS.md  BRAIN_LAYER_DESIGN.md  COMPARISON.md  CONFIG.md  DEMO.md  INTEGRATIONS.md  SELF_EXTRACTION.md
examples/: demo.py  demo.sh  scenario_demo.py
(+7 files in other folders)
